# lab17

./: CMakeLists.txt  Game.qml  GameLogic.js  GameOver.qml  LAB17.db  LAB17.sqbpro  Main.qml  dbmanager.cpp  dbmanager.h  listmodel.cpp  listmodel.h  main.cpp
